test/vm/fails/out_of_bounds_array_set.js

var array = [];
array[1111] = true;
